Fixed bug for not being able of editing Download via Flatpage Admin Adjusted secondary bar so that login info does not overlap with help links.

--- a/voyages/sitemedia/css/contribute/login_base.css
+++ b/voyages/sitemedia/css/contribute/login_base.css
@@ -1,10 +1,12 @@
 /* User top-right toolbar to log out/change password */
 .userlogtool {
+	clear: both;
+	margin: 0;
+	width: 100%;
+	background-color: #05768A;
     font-size: 9pt;
-    padding-right: 20px;
-    position: absolute;
-    right: 0;
-    top: 65px;
+    padding: 3px 20px 3px 5px;
+    float: right;
     text-align: right;
     font-family: "Lucida Grande","DejaVu Sans","Bitstream Vera Sans",Verdana,Arial,sans-serif;
 }
@@ -21,6 +23,3 @@
 	text-decoration: underline;
 }
 
-div.secondary-bar {
-	height: 25px;
-}
